// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setEditor matches snapshot 1`] = `
"<div class=\\"ipl-expansion-panel__content\\">
  <div class=\\"ipl-expansion-panel__header layout horizontal center-vertical\\">
    <div class=\\"ipl-expansion-panel__title\\">Edit round</div>
    <div><svg class=\\"svg-inline--fa fa-chevron-left fa-w-10 icon\\" aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-left\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 320 512\\">
        <path class=\\"\\" fill=\\"currentColor\\" d=\\"M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z\\"></path>
      </svg></div>
  </div>
  <div class=\\"content\\" style=\\"display: none;\\">
    <div data-test=\\"set-editor-0\\" class=\\"layout horizontal center-vertical m-t-4\\"><span class=\\"set-number\\">1</span>
      <ipl-select-stub modelvalue=\\"Blackbelly Skatepark\\" options=\\"[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" data-test=\\"stage-select\\" class=\\"m-l-6\\"></ipl-select-stub>
      <ipl-select-stub modelvalue=\\"Rainmaker\\" options=\\"[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" data-test=\\"mode-select\\" class=\\"m-l-6\\"></ipl-select-stub>
      <ipl-select-stub modelvalue=\\"Cool Colors_2\\" optiongroups=\\"[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" class=\\"m-l-6\\" data-test=\\"color-select\\" style=\\"display: none;\\"></ipl-select-stub>
      <div class=\\"layout horizontal max-width m-l-6\\" style=\\"display: none;\\">
        <ipl-input-stub name=\\"team-a-color\\" modelvalue=\\"#123123\\" type=\\"color\\" centered=\\"false\\" disabled=\\"false\\" class=\\"max-width custom-color-select\\" style=\\"flex-grow: 1;\\" data-test=\\"custom-color-select-a\\"></ipl-input-stub>
        <ipl-input-stub name=\\"team-b-color\\" modelvalue=\\"#345345\\" type=\\"color\\" centered=\\"false\\" disabled=\\"false\\" class=\\"m-l-8 max-width custom-color-select\\" style=\\"flex-grow: 1;\\" data-test=\\"custom-color-select-b\\"></ipl-input-stub>
      </div>
      <div class=\\"color-editor-toggles layout horizontal\\" style=\\"display: none;\\">
        <ipl-checkbox-stub label=\\"Custom color\\" modelvalue=\\"false\\" small=\\"true\\" disabled=\\"false\\" data-test=\\"custom-color-toggle\\"></ipl-checkbox-stub>
        <ipl-checkbox-stub label=\\"Swap colors\\" modelvalue=\\"false\\" small=\\"true\\" disabled=\\"false\\" class=\\"m-l-6\\" data-test=\\"swap-colors-toggle\\"></ipl-checkbox-stub>
      </div>
      <ipl-button-stub icon=\\"times\\" color=\\"red\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" class=\\"m-l-6 no-winner-button\\" data-test=\\"set-winner-button-none\\"></ipl-button-stub>
      <div class=\\"winner-selection m-l-6 layout horizontal\\">
        <ipl-button-stub label=\\"A\\" color=\\"#123123\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" style=\\"border-left: 0px solid #123123;\\" data-test=\\"set-winner-button-a\\"></ipl-button-stub>
        <ipl-button-stub label=\\"B\\" color=\\"#345345\\" disabled=\\"true\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" style=\\"border-right: 8px solid #345345;\\" data-test=\\"set-winner-button-b\\"></ipl-button-stub>
      </div>
    </div>
    <div data-test=\\"set-editor-1\\" class=\\"layout horizontal center-vertical m-t-4\\"><span class=\\"set-number\\">2</span>
      <ipl-select-stub modelvalue=\\"MakoMart\\" options=\\"[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" data-test=\\"stage-select\\" class=\\"m-l-6\\"></ipl-select-stub>
      <ipl-select-stub modelvalue=\\"Tower Control\\" options=\\"[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" data-test=\\"mode-select\\" class=\\"m-l-6\\"></ipl-select-stub>
      <ipl-select-stub modelvalue=\\"Custom Color_0\\" optiongroups=\\"[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" class=\\"m-l-6\\" data-test=\\"color-select\\" style=\\"display: none;\\"></ipl-select-stub>
      <div class=\\"layout horizontal max-width m-l-6\\" style=\\"display: none;\\">
        <ipl-input-stub name=\\"team-a-color\\" modelvalue=\\"#837693\\" type=\\"color\\" centered=\\"false\\" disabled=\\"false\\" class=\\"max-width custom-color-select\\" style=\\"flex-grow: 1;\\" data-test=\\"custom-color-select-a\\"></ipl-input-stub>
        <ipl-input-stub name=\\"team-b-color\\" modelvalue=\\"#206739\\" type=\\"color\\" centered=\\"false\\" disabled=\\"false\\" class=\\"m-l-8 max-width custom-color-select\\" style=\\"flex-grow: 1;\\" data-test=\\"custom-color-select-b\\"></ipl-input-stub>
      </div>
      <div class=\\"color-editor-toggles layout horizontal\\" style=\\"display: none;\\">
        <ipl-checkbox-stub label=\\"Custom color\\" modelvalue=\\"true\\" small=\\"true\\" disabled=\\"false\\" data-test=\\"custom-color-toggle\\"></ipl-checkbox-stub>
        <ipl-checkbox-stub label=\\"Swap colors\\" modelvalue=\\"true\\" small=\\"true\\" disabled=\\"false\\" class=\\"m-l-6\\" data-test=\\"swap-colors-toggle\\"></ipl-checkbox-stub>
      </div>
      <ipl-button-stub icon=\\"times\\" color=\\"red\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" class=\\"m-l-6 no-winner-button\\" data-test=\\"set-winner-button-none\\"></ipl-button-stub>
      <div class=\\"winner-selection m-l-6 layout horizontal\\">
        <ipl-button-stub label=\\"A\\" color=\\"#837693\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" style=\\"border-left: 0px solid #837693;\\" data-test=\\"set-winner-button-a\\"></ipl-button-stub>
        <ipl-button-stub label=\\"B\\" color=\\"#206739\\" disabled=\\"true\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" style=\\"border-right: 8px solid #206739;\\" data-test=\\"set-winner-button-b\\"></ipl-button-stub>
      </div>
    </div>
    <div data-test=\\"set-editor-2\\" class=\\"layout horizontal center-vertical m-t-4\\"><span class=\\"set-number\\">3</span>
      <ipl-select-stub modelvalue=\\"Camp Triggerfish\\" options=\\"[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" data-test=\\"stage-select\\" class=\\"m-l-6\\"></ipl-select-stub>
      <ipl-select-stub modelvalue=\\"Splat Zones\\" options=\\"[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" data-test=\\"mode-select\\" class=\\"m-l-6\\"></ipl-select-stub>
      <ipl-select-stub modelvalue=\\"Ranked Modes_0\\" optiongroups=\\"[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"true\\" class=\\"m-l-6\\" data-test=\\"color-select\\" style=\\"display: none;\\"></ipl-select-stub>
      <div class=\\"layout horizontal max-width m-l-6\\" style=\\"display: none;\\">
        <ipl-input-stub name=\\"team-a-color\\" type=\\"color\\" centered=\\"false\\" disabled=\\"true\\" class=\\"max-width custom-color-select\\" style=\\"flex-grow: 1;\\" data-test=\\"custom-color-select-a\\"></ipl-input-stub>
        <ipl-input-stub name=\\"team-b-color\\" type=\\"color\\" centered=\\"false\\" disabled=\\"true\\" class=\\"m-l-8 max-width custom-color-select\\" style=\\"flex-grow: 1;\\" data-test=\\"custom-color-select-b\\"></ipl-input-stub>
      </div>
      <div class=\\"color-editor-toggles layout horizontal\\" style=\\"display: none;\\">
        <ipl-checkbox-stub label=\\"Custom color\\" modelvalue=\\"false\\" small=\\"true\\" disabled=\\"true\\" data-test=\\"custom-color-toggle\\"></ipl-checkbox-stub>
        <ipl-checkbox-stub label=\\"Swap colors\\" modelvalue=\\"false\\" small=\\"true\\" disabled=\\"true\\" class=\\"m-l-6\\" data-test=\\"swap-colors-toggle\\"></ipl-checkbox-stub>
      </div>
      <ipl-button-stub icon=\\"times\\" color=\\"red\\" disabled=\\"true\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" class=\\"m-l-6 no-winner-button\\" data-test=\\"set-winner-button-none\\"></ipl-button-stub>
      <div class=\\"winner-selection m-l-6 layout horizontal\\">
        <ipl-button-stub label=\\"A\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" data-test=\\"set-winner-button-a\\"></ipl-button-stub>
        <ipl-button-stub label=\\"B\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" data-test=\\"set-winner-button-b\\"></ipl-button-stub>
      </div>
    </div>
    <div class=\\"layout horizontal m-t-8\\">
      <ipl-button-stub label=\\"Update\\" color=\\"blue\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" data-test=\\"update-button\\"></ipl-button-stub>
      <ipl-button-stub label=\\"Reset\\" color=\\"red\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"true\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" class=\\"m-l-6\\" data-test=\\"reset-button\\"></ipl-button-stub>
      <ipl-toggle-button-stub label=\\"Edit colors\\" modelvalue=\\"false\\" class=\\"m-l-6\\" data-test=\\"edit-colors-toggle\\"></ipl-toggle-button-stub>
    </div>
  </div>
</div>"
`;

exports[`setEditor matches snapshot when editing colors 1`] = `
"<div class=\\"ipl-expansion-panel__content\\">
  <div class=\\"ipl-expansion-panel__header layout horizontal center-vertical\\">
    <div class=\\"ipl-expansion-panel__title\\">Edit round</div>
    <div><svg class=\\"svg-inline--fa fa-chevron-left fa-w-10 icon\\" aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-left\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 320 512\\">
        <path class=\\"\\" fill=\\"currentColor\\" d=\\"M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z\\"></path>
      </svg></div>
  </div>
  <div class=\\"content\\" style=\\"display: none;\\">
    <div data-test=\\"set-editor-0\\" class=\\"layout horizontal center-vertical m-t-4\\"><span class=\\"set-number\\">1</span>
      <ipl-select-stub modelvalue=\\"Blackbelly Skatepark\\" options=\\"[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" data-test=\\"stage-select\\" class=\\"m-l-6\\" style=\\"display: none;\\"></ipl-select-stub>
      <ipl-select-stub modelvalue=\\"Rainmaker\\" options=\\"[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" data-test=\\"mode-select\\" class=\\"m-l-6\\" style=\\"display: none;\\"></ipl-select-stub>
      <ipl-select-stub modelvalue=\\"Cool Colors_2\\" optiongroups=\\"[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" class=\\"m-l-6\\" data-test=\\"color-select\\" style=\\"\\"></ipl-select-stub>
      <div class=\\"layout horizontal max-width m-l-6\\" style=\\"display: none;\\">
        <ipl-input-stub name=\\"team-a-color\\" modelvalue=\\"#123123\\" type=\\"color\\" centered=\\"false\\" disabled=\\"false\\" class=\\"max-width custom-color-select\\" style=\\"flex-grow: 1;\\" data-test=\\"custom-color-select-a\\"></ipl-input-stub>
        <ipl-input-stub name=\\"team-b-color\\" modelvalue=\\"#345345\\" type=\\"color\\" centered=\\"false\\" disabled=\\"false\\" class=\\"m-l-8 max-width custom-color-select\\" style=\\"flex-grow: 1;\\" data-test=\\"custom-color-select-b\\"></ipl-input-stub>
      </div>
      <div class=\\"color-editor-toggles layout horizontal\\" style=\\"\\">
        <ipl-checkbox-stub label=\\"Custom color\\" modelvalue=\\"false\\" small=\\"true\\" disabled=\\"false\\" data-test=\\"custom-color-toggle\\"></ipl-checkbox-stub>
        <ipl-checkbox-stub label=\\"Swap colors\\" modelvalue=\\"false\\" small=\\"true\\" disabled=\\"false\\" class=\\"m-l-6\\" data-test=\\"swap-colors-toggle\\"></ipl-checkbox-stub>
      </div>
      <ipl-button-stub icon=\\"times\\" color=\\"red\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" class=\\"m-l-6 no-winner-button\\" data-test=\\"set-winner-button-none\\"></ipl-button-stub>
      <div class=\\"winner-selection m-l-6 layout horizontal\\">
        <ipl-button-stub label=\\"A\\" color=\\"#123123\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" style=\\"border-left: 0px solid #123123;\\" data-test=\\"set-winner-button-a\\"></ipl-button-stub>
        <ipl-button-stub label=\\"B\\" color=\\"#345345\\" disabled=\\"true\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" style=\\"border-right: 8px solid #345345;\\" data-test=\\"set-winner-button-b\\"></ipl-button-stub>
      </div>
    </div>
    <div data-test=\\"set-editor-1\\" class=\\"layout horizontal center-vertical m-t-4\\"><span class=\\"set-number\\">2</span>
      <ipl-select-stub modelvalue=\\"MakoMart\\" options=\\"[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" data-test=\\"stage-select\\" class=\\"m-l-6\\" style=\\"display: none;\\"></ipl-select-stub>
      <ipl-select-stub modelvalue=\\"Tower Control\\" options=\\"[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" data-test=\\"mode-select\\" class=\\"m-l-6\\" style=\\"display: none;\\"></ipl-select-stub>
      <ipl-select-stub modelvalue=\\"Custom Color_0\\" optiongroups=\\"[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" class=\\"m-l-6\\" data-test=\\"color-select\\" style=\\"display: none;\\"></ipl-select-stub>
      <div class=\\"layout horizontal max-width m-l-6\\" style=\\"\\">
        <ipl-input-stub name=\\"team-a-color\\" modelvalue=\\"#837693\\" type=\\"color\\" centered=\\"false\\" disabled=\\"false\\" class=\\"max-width custom-color-select\\" style=\\"flex-grow: 1;\\" data-test=\\"custom-color-select-a\\"></ipl-input-stub>
        <ipl-input-stub name=\\"team-b-color\\" modelvalue=\\"#206739\\" type=\\"color\\" centered=\\"false\\" disabled=\\"false\\" class=\\"m-l-8 max-width custom-color-select\\" style=\\"flex-grow: 1;\\" data-test=\\"custom-color-select-b\\"></ipl-input-stub>
      </div>
      <div class=\\"color-editor-toggles layout horizontal\\" style=\\"\\">
        <ipl-checkbox-stub label=\\"Custom color\\" modelvalue=\\"true\\" small=\\"true\\" disabled=\\"false\\" data-test=\\"custom-color-toggle\\"></ipl-checkbox-stub>
        <ipl-checkbox-stub label=\\"Swap colors\\" modelvalue=\\"true\\" small=\\"true\\" disabled=\\"false\\" class=\\"m-l-6\\" data-test=\\"swap-colors-toggle\\"></ipl-checkbox-stub>
      </div>
      <ipl-button-stub icon=\\"times\\" color=\\"red\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" class=\\"m-l-6 no-winner-button\\" data-test=\\"set-winner-button-none\\"></ipl-button-stub>
      <div class=\\"winner-selection m-l-6 layout horizontal\\">
        <ipl-button-stub label=\\"A\\" color=\\"#837693\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" style=\\"border-left: 0px solid #837693;\\" data-test=\\"set-winner-button-a\\"></ipl-button-stub>
        <ipl-button-stub label=\\"B\\" color=\\"#206739\\" disabled=\\"true\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" style=\\"border-right: 8px solid #206739;\\" data-test=\\"set-winner-button-b\\"></ipl-button-stub>
      </div>
    </div>
    <div data-test=\\"set-editor-2\\" class=\\"layout horizontal center-vertical m-t-4\\"><span class=\\"set-number\\">3</span>
      <ipl-select-stub modelvalue=\\"Camp Triggerfish\\" options=\\"[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" data-test=\\"stage-select\\" class=\\"m-l-6\\" style=\\"display: none;\\"></ipl-select-stub>
      <ipl-select-stub modelvalue=\\"Splat Zones\\" options=\\"[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"false\\" data-test=\\"mode-select\\" class=\\"m-l-6\\" style=\\"display: none;\\"></ipl-select-stub>
      <ipl-select-stub modelvalue=\\"Ranked Modes_0\\" optiongroups=\\"[object Object],[object Object],[object Object],[object Object]\\" disabled=\\"true\\" class=\\"m-l-6\\" data-test=\\"color-select\\" style=\\"\\"></ipl-select-stub>
      <div class=\\"layout horizontal max-width m-l-6\\" style=\\"display: none;\\">
        <ipl-input-stub name=\\"team-a-color\\" type=\\"color\\" centered=\\"false\\" disabled=\\"true\\" class=\\"max-width custom-color-select\\" style=\\"flex-grow: 1;\\" data-test=\\"custom-color-select-a\\"></ipl-input-stub>
        <ipl-input-stub name=\\"team-b-color\\" type=\\"color\\" centered=\\"false\\" disabled=\\"true\\" class=\\"m-l-8 max-width custom-color-select\\" style=\\"flex-grow: 1;\\" data-test=\\"custom-color-select-b\\"></ipl-input-stub>
      </div>
      <div class=\\"color-editor-toggles layout horizontal\\" style=\\"\\">
        <ipl-checkbox-stub label=\\"Custom color\\" modelvalue=\\"false\\" small=\\"true\\" disabled=\\"true\\" data-test=\\"custom-color-toggle\\"></ipl-checkbox-stub>
        <ipl-checkbox-stub label=\\"Swap colors\\" modelvalue=\\"false\\" small=\\"true\\" disabled=\\"true\\" class=\\"m-l-6\\" data-test=\\"swap-colors-toggle\\"></ipl-checkbox-stub>
      </div>
      <ipl-button-stub icon=\\"times\\" color=\\"red\\" disabled=\\"true\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" class=\\"m-l-6 no-winner-button\\" data-test=\\"set-winner-button-none\\"></ipl-button-stub>
      <div class=\\"winner-selection m-l-6 layout horizontal\\">
        <ipl-button-stub label=\\"A\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" data-test=\\"set-winner-button-a\\"></ipl-button-stub>
        <ipl-button-stub label=\\"B\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" data-test=\\"set-winner-button-b\\"></ipl-button-stub>
      </div>
    </div>
    <div class=\\"layout horizontal m-t-8\\">
      <ipl-button-stub label=\\"Update\\" color=\\"blue\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" data-test=\\"update-button\\"></ipl-button-stub>
      <ipl-button-stub label=\\"Reset\\" color=\\"red\\" disabled=\\"false\\" async=\\"false\\" progressmessage=\\"Working...\\" successmessage=\\"Done!\\" requiresconfirmation=\\"true\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" class=\\"m-l-6\\" data-test=\\"reset-button\\"></ipl-button-stub>
      <ipl-toggle-button-stub label=\\"Edit colors\\" modelvalue=\\"true\\" class=\\"m-l-6\\" data-test=\\"edit-colors-toggle\\"></ipl-toggle-button-stub>
    </div>
  </div>
</div>"
`;
